# ROS-Release-Build

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  roscribe_smart.sh
app/: design_tokens.css  workspace_smart.py
metadata_extractor/: README.md  extractor.py  main.py  models.py
prompts/: system_prompt.md  system_prompt_smart.md
scripts/: backfill_lankalaw_case_meta.py  build_all.sh  dedupe.py  fix_uncategorised.py  get_model.py  hash_password.py  reindex.py  reparse_docling.py  roscribe.ps1  scrape_udecide_images.py  update_corpus.py  verify_breakdowns.py
src/: __init__.py  analyze_smart.py  config.py  dedupe.py  index.py  ingest.py  italic_cite.py  parsing.py  retrieve.py  schema.py  scrape.py  scrape_lankalaw.py  store.py
tests/: test_schema.py
